# causal-inference-in-python-code

./: Simulated-Data.ipynb  pyproject.toml
causal-inference-in-python/: 01-Introduction-To-Causal-Inference.ipynb  02-Randomised-Experiments-and-Stats-Review.ipynb  03-Graphical-Models.ipynb  04-The-Unreasonable-Effectiveness-of-Linear-Regression.ipynb  05-Propensity-Score.ipynb  06-Effect-Heterogeneity.ipynb
causal-inference-in-python/data/: management_training.csv
