[tool.poetry]
name = "causal-inference-in-python-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "causal_inference_in_python_code"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
graphviz = "^0.20.3"
networkx = "^3.3"
scikit-learn = "^1.4.2"
toolz = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
